logs/dag_id=people_processing/run_id=scheduled__2023-11-01T000000+0000/task_id=create_table/attempt=1.log
[2023-11-02T08:31:19.991+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people_processing.create_table scheduled__2023-11-01T00:00:00+00:00 [queued]>
[2023-11-02T08:31:20.004+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people_processing.create_table scheduled__2023-11-01T00:00:00+00:00 [queued]>
[2023-11-02T08:31:20.005+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T08:31:20.006+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-11-02T08:31:20.007+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T08:31:20.030+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_table> on 2023-11-01 00:00:00+00:00
[2023-11-02T08:31:20.036+0000] {standard_task_runner.py:55} INFO - Started process 3235 to run task
[2023-11-02T08:31:20.039+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'people_processing', 'create_table', 'scheduled__2023-11-01T00:00:00+00:00', '--job-id', '3', '--raw', '--subdir', 'DAGS_FOLDER/people.py', '--cfg-path', '/tmp/tmp3mwxwfd8']
[2023-11-02T08:31:20.041+0000] {standard_task_runner.py:83} INFO - Job 3: Subtask create_table
[2023-11-02T08:31:20.113+0000] {task_command.py:376} INFO - Running <TaskInstance: people_processing.create_table scheduled__2023-11-01T00:00:00+00:00 [running]> on host b33dd0bd4b35
[2023-11-02T08:31:20.257+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=people_processing
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-01T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-11-01T00:00:00+00:00
[2023-11-02T08:31:20.313+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 288, in run
    with closing(self.get_conn()) as conn:
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/hooks/postgres.py", line 88, in get_conn
    conn = deepcopy(self.connection or self.get_connection(conn_id))
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/hooks/base.py", line 70, in get_connection
    conn = Connection.get_connection_from_secrets(conn_id)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/models/connection.py", line 432, in get_connection_from_secrets
    raise AirflowNotFoundException(f"The conn_id `{conn_id}` isn't defined")
airflow.exceptions.AirflowNotFoundException: The conn_id `postgres` isn't defined
[2023-11-02T08:31:20.319+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=people_processing, task_id=create_table, execution_date=20231101T000000, start_date=20231102T083119, end_date=20231102T083120
[2023-11-02T08:31:20.349+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 3 for task create_table (The conn_id `postgres` isn't defined; 3235)
[2023-11-02T08:31:20.374+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-02T08:31:20.403+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
[2023-11-02T17:14:17.964+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people_processing.create_table scheduled__2023-11-01T00:00:00+00:00 [queued]>
[2023-11-02T17:14:17.978+0000] {taskinstance.py:1165} INFO - Dependencies all met for <TaskInstance: people_processing.create_table scheduled__2023-11-01T00:00:00+00:00 [queued]>
[2023-11-02T17:14:17.979+0000] {taskinstance.py:1362} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T17:14:17.980+0000] {taskinstance.py:1363} INFO - Starting attempt 1 of 1
[2023-11-02T17:14:17.980+0000] {taskinstance.py:1364} INFO - 
--------------------------------------------------------------------------------
[2023-11-02T17:14:17.999+0000] {taskinstance.py:1383} INFO - Executing <Task(PostgresOperator): create_table> on 2023-11-01 00:00:00+00:00
[2023-11-02T17:14:18.006+0000] {standard_task_runner.py:55} INFO - Started process 194 to run task
[2023-11-02T17:14:18.009+0000] {standard_task_runner.py:82} INFO - Running: ['***', 'tasks', 'run', 'people_processing', 'create_table', 'scheduled__2023-11-01T00:00:00+00:00', '--job-id', '24', '--raw', '--subdir', 'DAGS_FOLDER/people.py', '--cfg-path', '/tmp/tmpu5ngstt5']
[2023-11-02T17:14:18.011+0000] {standard_task_runner.py:83} INFO - Job 24: Subtask create_table
[2023-11-02T17:14:18.078+0000] {task_command.py:376} INFO - Running <TaskInstance: people_processing.create_table scheduled__2023-11-01T00:00:00+00:00 [running]> on host b0e711ae7c72
[2023-11-02T17:14:18.158+0000] {taskinstance.py:1592} INFO - Exporting the following env vars:
AIRFLOW_CTX_DAG_OWNER=***
AIRFLOW_CTX_DAG_ID=people_processing
AIRFLOW_CTX_TASK_ID=create_table
AIRFLOW_CTX_EXECUTION_DATE=2023-11-01T00:00:00+00:00
AIRFLOW_CTX_TRY_NUMBER=1
AIRFLOW_CTX_DAG_RUN_ID=scheduled__2023-11-01T00:00:00+00:00
[2023-11-02T17:14:18.169+0000] {base.py:71} INFO - Using connection ID 'postgres' for task execution.
[2023-11-02T17:14:18.173+0000] {sql.py:315} INFO - Running statement: 
            CREATE TABLE IF NOT EXISTS users (
                Index INT Primary Key,
                User_ID TEXT NOT NULL,
                Last_Name TEXT NOT NULL,
                Sex TEXT NOT NULL,
                Email TEXT NOT NULL,
                Phone TEXT NOT NULL,
                Date_of_birth TEXT NOT NULL
                Job_Title  TEXT NOT NULL
            );
            , parameters: None
[2023-11-02T17:14:18.175+0000] {taskinstance.py:1851} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/postgres/operators/postgres.py", line 94, in execute
    self.hook.run(self.sql, self.autocommit, parameters=self.parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 295, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.7/site-packages/airflow/providers/common/sql/hooks/sql.py", line 320, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near "Job_Title"
LINE 10:                 Job_Title  TEXT NOT NULL
                         ^

[2023-11-02T17:14:18.186+0000] {taskinstance.py:1406} INFO - Marking task as FAILED. dag_id=people_processing, task_id=create_table, execution_date=20231101T000000, start_date=20231102T171417, end_date=20231102T171418
[2023-11-02T17:14:18.206+0000] {standard_task_runner.py:105} ERROR - Failed to execute job 24 for task create_table (syntax error at or near "Job_Title"
LINE 10:                 Job_Title  TEXT NOT NULL
                         ^
; 194)
[2023-11-02T17:14:18.221+0000] {local_task_job.py:164} INFO - Task exited with return code 1
[2023-11-02T17:14:18.250+0000] {local_task_job.py:273} INFO - 0 downstream tasks scheduled from follow-on schedule check
